feat: Support for HTTP proxy environment variables
Fixes #368