@@ -116,6 +116,7 @@
                         </dependency>
                     </dependencies>
                     <configuration>
+                        <argLine>--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                         <outputFormats>
                             <format>stryker-dashboard</format>
                         </outputFormats>
@@ -177,6 +178,13 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <!-- This is necessary to change environment variables in tests in JDK 17 -->
+                    <argLine>
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                    </argLine>
+                </configuration>
             </plugin>
 
             <plugin>
